# WarMachineOptimizer

./: Cargo.toml  README.md  build.sh  guardian.html  index.html  manifest.json  sw.js
img/heroes/: arvie.avif  asmondai.avif  astrid.avif  avatarAmun164.avif  avatarAmun164.jxl  avatarAnzo164.avif  avatarAnzo164.jxl  avatarArvie164.avif  avatarArvie164.jxl  avatarAsmondai164.avif  avatarAsmondai164.jxl  avatarAstrid164.avif  avatarAstrid164.jxl  avatarBelien164.avif  avatarBelien164.jxl  avatarBenedictus164.avif  avatarBenedictus164.jxl  avatarBlaze164.avif  avatarBlaze164.jxl  avatarBoris164.avif  avatarBoris164.jxl  avatarBurt164.avif  avatarBurt164.jxl  avatarCirilo164.avif  avatarCirilo164.jxl  avatarDanysa164.avif  avatarDanysa164.jxl  avatarFini164.avif  avatarFini164.jxl  avatarHongyu164.avif  avatarHongyu164.jxl  avatarIna164.avif  avatarIna164.jxl  avatarIseris164.avif  avatarIseris164.jxl  avatarJess164.avif  avatarJess164.jxl  avatarJoe164.avif  avatarJoe164.jxl  avatarKramatak164.avif  (+46 more)
img/machines/: aegis.avif  aegis164.avif  aegis164.jxl  baloon164.avif  baloon164.jxl  cloudfist.avif  curator.avif  curator164.avif  curator164.jxl  earthshatter164.avif  earthshatter164.jxl  earthshatterer.avif  fireCracker164.avif  fireCracker164.jxl  firecracker.avif  fortress.avif  (+23 more)
js/: app.js  battleengine.js  calculator.js  config.js  db.js  guardian-app.js  guardianCalculator.js  main.js  optimizer.js  optimizerWorker.js  profiles.js  pwa.js  saveload.js  storage.js  version.js  workerManager.js
src/: battle_engine.rs  calculator.rs  lib.rs  optimizer.rs  types.rs
(+131 files in other folders)
