[package]
name = "wmo-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
# Pin to exact version — solo-maintained port, avoid surprise breakage
break-eternity = "=0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
