[package]
name = "wmo-engine"
version = "0.1.1"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
# Pin to exact version — solo-maintained port, avoid surprise breakage
break-eternity = "=0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
